--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Periodicals'
 - !lcc 'AP'
+- GITenberg
 title: The Knickerbocker, Vol. 22, No. 6, December 1843
 url: http://www.gutenberg.org/ebooks/44591
